# vecio

./: Cargo.toml  README.md
src/: lib.rs
src/sys/: mod.rs  unix.rs  windows.rs
